[package]
name = "empire-state-colors"
version = "0.1.0"
edition = "2021"
authors = [ "Sebastian Klose" ]

[dependencies]
lambda_http = "0.8"
lambda_runtime = "0.8"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
reqwest = { version = "0.11", features = ["json"] }
visdom = "1.0"
regex = "1.10"
serde = "1"
serde_json = "1"

# see https://github.com/sfackler/rust-openssl/issues/2092
# using 'vendored' build on OSX + Linux solves the issue
[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10", features = [ "vendored" ] }